--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,43 +4,25 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    background-color: #f6f8fc;
+}
 .content{
     padding: 1rem;
+    background-color: white;
+    height: 100vh;
+
+}
+
+
+.content h1{
+    margin: 0;
 }
 
 @media screen and (min-width: 992px) {
     .content{
         max-width: 992px;
         margin: 0 auto;
+
     }
   }
-
-.content h1{
-    margin: 0;
-}
-
-ol.pokemons{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-ol.pokemons li{
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem;
-    padding: 1rem;
-    background-color: #14a06f;
-    color: white;
-    border-radius: 1rem;
-    height: 100px;
-}
-
-ol.pokemons li img {
-    max-width: 100%;
-    height: 100px;
-    align-self: flex-end;
-}
-
